# mc-radiative-transfer

./: .gitignore  README.md  pyproject.toml
docs/: next-steps.md  references.md
docs/deep-dives/: make_figures.py  v0.1.0-sampling-primitives.md  v0.2.0-photon-transport.md  v0.5.0-validation.md  v0.5.1-beaming-correction.md  v0.6.0-beaming-library.md  v0.6.1-isotropic-injection.md  v0.6.2-reproducible-seeding.md  v0.7.0-convergence-study.md  v0.8.0-pulse-profile.md  v0.8.1-code-comparison.md  v0.8.1-rung-b.md  v0.9.0-beaming-pulse.md  v0.9.1-j0030-anchor.md  v0.9.10-doppler.md  v0.9.11-isotropic-transport.md  v0.9.12-tail-and-robustness.md  v0.9.2-j0740-anchor.md  v0.9.3-research-notes.md  v0.9.4-phase-diagram.md  v0.9.5-validation-positioning.md  v0.9.6-finite-cap.md  (+8 more)
proposal/: proposal.aux  proposal.fdb_latexmk  proposal.fls
scripts/: a3_seed_errors.py  anchor_lib.py  b2_exact_bending.py  beaming_pulse_sweep.py  c1_doppler_validate.py  c2_doppler_coupling.py  c3_band_doppler.py  c4_caveat_audit.py  code_comparison.py  convergence_study.py  convergence_study_v2.py  d_isotropic_validate.py  doppler_figures.py  e2_tail_sensitivity.py  e3_atmosphere_laws.py  finite_cap.py  j0030_anchor.py  j0740_anchor.py  phase_diagram.py  plot_paths.py  pulse_demo.py  rung_b_compare.py  tau_sweep.py  validate_engine.py  validate_phase_diagram.py
src/: monte_carlo.py  plot_paths.py  utils.py  validate_engine.py
tests/: conftest.py  test_bending.py  test_convergence.py  test_physics.py  test_pulse.py  test_rotating.py  test_sensitivity.py  test_theory.py  test_transport.py
(+16 files in other folders)
