[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcrt"
version = "0.5.1"
description = "Monte Carlo radiative transfer through a plane-parallel neutron star atmosphere"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
